// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"compact":false} 1`] = `
":host {
  --p-internal-switch-scaling: 1;
  display: inline-flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(11.2px * (var(--p-internal-switch-scaling) - 0.64285714) + 4px) !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  box-sizing: border-box;
  width: calc(var(--p-internal-switch-scaling) * 3rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
  margin-block: max(0px, calc((calc(6px + 2.125ex) - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  border: 1px solid var(--p-color-contrast-low);
  border-radius: var(--p-radius-full);
  background: var(--p-color-frosted-soft);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-1px - max(0px, calc(24px - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: var(--p-color-primary);
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(var(--p-internal-switch-scaling) * 1.75rem) - calc(6px + 2.125ex)) / 2));
}
@media(hover:hover) {
  button:hover {
    border-color: var(--p-color-primary);
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(var(--p-internal-switch-scaling) * 1.25rem);
  height: calc(var(--p-internal-switch-scaling) * 1.25rem);
  border-radius: var(--p-radius-full);
  background: var(--p-color-primary);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  transform: translate3d(calc(var(--p-internal-switch-scaling) * .1875rem), 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(calc(var(--p-internal-switch-scaling) * .1875rem) * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"compact":true} 1`] = `
":host {
  --p-internal-switch-scaling: 0.64285714;
  display: inline-flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(11.2px * (var(--p-internal-switch-scaling) - 0.64285714) + 4px) !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  box-sizing: border-box;
  width: calc(var(--p-internal-switch-scaling) * 3rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
  margin-block: max(0px, calc((calc(6px + 2.125ex) - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  border: 1px solid var(--p-color-contrast-low);
  border-radius: var(--p-radius-full);
  background: var(--p-color-frosted-soft);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-1px - max(0px, calc(24px - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: var(--p-color-primary);
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(var(--p-internal-switch-scaling) * 1.75rem) - calc(6px + 2.125ex)) / 2));
}
@media(hover:hover) {
  button:hover {
    border-color: var(--p-color-primary);
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(var(--p-internal-switch-scaling) * 1.25rem);
  height: calc(var(--p-internal-switch-scaling) * 1.25rem);
  border-radius: var(--p-radius-full);
  background: var(--p-color-primary);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  transform: translate3d(calc(var(--p-internal-switch-scaling) * .1875rem), 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(calc(var(--p-internal-switch-scaling) * .1875rem) * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":false,"checked":false,"disabled":true,"loading":false,"compact":false} 1`] = `
":host {
  --p-internal-switch-scaling: 1;
  display: inline-flex;
  opacity: 0.4 !important;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(11.2px * (var(--p-internal-switch-scaling) - 0.64285714) + 4px) !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  box-sizing: border-box;
  width: calc(var(--p-internal-switch-scaling) * 3rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
  margin-block: max(0px, calc((calc(6px + 2.125ex) - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  border: 1px solid var(--p-color-contrast-low);
  border-radius: var(--p-radius-full);
  background: var(--p-color-frosted-soft);
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-1px - max(0px, calc(24px - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  min-width: 0;
  min-height: 0;
  cursor: not-allowed;
  color: var(--p-color-primary);
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(var(--p-internal-switch-scaling) * 1.75rem) - calc(6px + 2.125ex)) / 2));
}
.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(var(--p-internal-switch-scaling) * 1.25rem);
  height: calc(var(--p-internal-switch-scaling) * 1.25rem);
  border-radius: var(--p-radius-full);
  background: var(--p-color-primary);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  transform: translate3d(calc(var(--p-internal-switch-scaling) * .1875rem), 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(calc(var(--p-internal-switch-scaling) * .1875rem) * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":false,"loading":false,"compact":false} 1`] = `
":host {
  --p-internal-switch-scaling: 1;
  display: flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(11.2px * (var(--p-internal-switch-scaling) - 0.64285714) + 4px) !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  box-sizing: border-box;
  width: calc(var(--p-internal-switch-scaling) * 3rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
  margin-block: max(0px, calc((calc(6px + 2.125ex) - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  border: 1px solid var(--p-color-contrast-low);
  border-radius: var(--p-radius-full);
  background: var(--p-color-frosted-soft);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-1px - max(0px, calc(24px - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: var(--p-color-primary);
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(var(--p-internal-switch-scaling) * 1.75rem) - calc(6px + 2.125ex)) / 2));
}
@media(hover:hover) {
  button:hover {
    border-color: var(--p-color-primary);
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(var(--p-internal-switch-scaling) * 1.25rem);
  height: calc(var(--p-internal-switch-scaling) * 1.25rem);
  border-radius: var(--p-radius-full);
  background: var(--p-color-primary);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  transform: translate3d(calc(var(--p-internal-switch-scaling) * .1875rem), 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(calc(var(--p-internal-switch-scaling) * .1875rem) * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":false,"loading":true,"compact":false} 1`] = `
":host {
  --p-internal-switch-scaling: 1;
  display: flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(11.2px * (var(--p-internal-switch-scaling) - 0.64285714) + 4px) !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  box-sizing: border-box;
  width: calc(var(--p-internal-switch-scaling) * 3rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
  margin-block: max(0px, calc((calc(6px + 2.125ex) - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  border: 1px solid var(--p-color-contrast-low);
  border-radius: var(--p-radius-full);
  background: var(--p-color-frosted-soft);
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-1px - max(0px, calc(24px - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  min-width: 0;
  min-height: 0;
  cursor: not-allowed;
  color: var(--p-color-primary);
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(var(--p-internal-switch-scaling) * 1.75rem) - calc(6px + 2.125ex)) / 2));
}
.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(var(--p-internal-switch-scaling) * 1.25rem);
  height: calc(var(--p-internal-switch-scaling) * 1.25rem);
  border-radius: var(--p-radius-full);
  background: transparent;
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  transform: translate3d(calc(var(--p-internal-switch-scaling) * .1875rem), 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(calc(var(--p-internal-switch-scaling) * .1875rem) * -1), 0, 0);
}
.spinner {
  width: calc(var(--p-internal-switch-scaling) * 1.75rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":true,"loading":true,"compact":false} 1`] = `
":host {
  --p-internal-switch-scaling: 1;
  display: flex;
  opacity: 0.4 !important;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(11.2px * (var(--p-internal-switch-scaling) - 0.64285714) + 4px) !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  box-sizing: border-box;
  width: calc(var(--p-internal-switch-scaling) * 3rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
  margin-block: max(0px, calc((calc(6px + 2.125ex) - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  border: 1px solid var(--p-color-contrast-low);
  border-radius: var(--p-radius-full);
  background: var(--p-color-frosted-soft);
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-1px - max(0px, calc(24px - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  min-width: 0;
  min-height: 0;
  cursor: not-allowed;
  color: var(--p-color-primary);
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(var(--p-internal-switch-scaling) * 1.75rem) - calc(6px + 2.125ex)) / 2));
}
.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(var(--p-internal-switch-scaling) * 1.25rem);
  height: calc(var(--p-internal-switch-scaling) * 1.25rem);
  border-radius: var(--p-radius-full);
  background: transparent;
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  transform: translate3d(calc(var(--p-internal-switch-scaling) * .1875rem), 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(calc(var(--p-internal-switch-scaling) * .1875rem) * -1), 0, 0);
}
.spinner {
  width: calc(var(--p-internal-switch-scaling) * 1.75rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":true,"loading":true,"compact":false} 2`] = `
":host {
  --p-internal-switch-scaling: 1;
  display: flex;
  opacity: 0.4 !important;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(11.2px * (var(--p-internal-switch-scaling) - 0.64285714) + 4px) !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  box-sizing: border-box;
  width: calc(var(--p-internal-switch-scaling) * 3rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
  margin-block: max(0px, calc((calc(6px + 2.125ex) - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  border: 1px solid var(--p-color-contrast-low);
  border-radius: var(--p-radius-full);
  background: var(--p-color-frosted-soft);
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-1px - max(0px, calc(24px - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  min-width: 0;
  min-height: 0;
  cursor: not-allowed;
  color: var(--p-color-primary);
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(var(--p-internal-switch-scaling) * 1.75rem) - calc(6px + 2.125ex)) / 2));
}
.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(var(--p-internal-switch-scaling) * 1.25rem);
  height: calc(var(--p-internal-switch-scaling) * 1.25rem);
  border-radius: var(--p-radius-full);
  background: transparent;
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  transform: translate3d(calc(var(--p-internal-switch-scaling) * .1875rem), 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(calc(var(--p-internal-switch-scaling) * .1875rem) * -1), 0, 0);
}
.spinner {
  width: calc(var(--p-internal-switch-scaling) * 1.75rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":true,"disabled":false,"loading":false,"compact":false} 1`] = `
":host {
  --p-internal-switch-scaling: 1;
  display: flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(11.2px * (var(--p-internal-switch-scaling) - 0.64285714) + 4px) !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  box-sizing: border-box;
  width: calc(var(--p-internal-switch-scaling) * 3rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
  margin-block: max(0px, calc((calc(6px + 2.125ex) - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  border: 1px solid var(--p-color-success-low);
  border-radius: var(--p-radius-full);
  background: var(--p-color-success-frosted-soft);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-1px - max(0px, calc(24px - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: var(--p-color-primary);
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(var(--p-internal-switch-scaling) * 1.75rem) - calc(6px + 2.125ex)) / 2));
}
@media(hover:hover) {
  button:hover {
    border-color: var(--p-color-success);
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(var(--p-internal-switch-scaling) * 1.25rem);
  height: calc(var(--p-internal-switch-scaling) * 1.25rem);
  border-radius: var(--p-radius-full);
  background: var(--p-color-success);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  transform: translate3d(calc(calc(var(--p-internal-switch-scaling) * 3rem) - 1px * 2 - 100% - calc(var(--p-internal-switch-scaling) * .1875rem)), 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(calc(calc(var(--p-internal-switch-scaling) * 3rem) - 1px * 2 - 100% - calc(var(--p-internal-switch-scaling) * .1875rem)) * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for {"alignLabel":"left","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"compact":false} 1`] = `
":host {
  --p-internal-switch-scaling: 1;
  display: inline-flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(11.2px * (var(--p-internal-switch-scaling) - 0.64285714) + 4px) !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  box-sizing: border-box;
  width: calc(var(--p-internal-switch-scaling) * 3rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
  margin-block: max(0px, calc((calc(6px + 2.125ex) - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  border: 1px solid var(--p-color-contrast-low);
  border-radius: var(--p-radius-full);
  background: var(--p-color-frosted-soft);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-1px - max(0px, calc(24px - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: var(--p-color-primary);
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(var(--p-internal-switch-scaling) * 1.75rem) - calc(6px + 2.125ex)) / 2));
}
@media(hover:hover) {
  button:hover {
    border-color: var(--p-color-primary);
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(var(--p-internal-switch-scaling) * 1.25rem);
  height: calc(var(--p-internal-switch-scaling) * 1.25rem);
  border-radius: var(--p-radius-full);
  background: var(--p-color-primary);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  transform: translate3d(calc(var(--p-internal-switch-scaling) * .1875rem), 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(calc(var(--p-internal-switch-scaling) * .1875rem) * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for {"alignLabel":"right","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"compact":false} 1`] = `
":host {
  --p-internal-switch-scaling: 1;
  display: inline-flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(11.2px * (var(--p-internal-switch-scaling) - 0.64285714) + 4px) !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  box-sizing: border-box;
  width: calc(var(--p-internal-switch-scaling) * 3rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
  margin-block: max(0px, calc((calc(6px + 2.125ex) - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  border: 1px solid var(--p-color-contrast-low);
  border-radius: var(--p-radius-full);
  background: var(--p-color-frosted-soft);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-1px - max(0px, calc(24px - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: var(--p-color-primary);
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(var(--p-internal-switch-scaling) * 1.75rem) - calc(6px + 2.125ex)) / 2));
}
@media(hover:hover) {
  button:hover {
    border-color: var(--p-color-primary);
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(var(--p-internal-switch-scaling) * 1.25rem);
  height: calc(var(--p-internal-switch-scaling) * 1.25rem);
  border-radius: var(--p-radius-full);
  background: var(--p-color-primary);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  transform: translate3d(calc(var(--p-internal-switch-scaling) * .1875rem), 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(calc(var(--p-internal-switch-scaling) * .1875rem) * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for {"alignLabel":"start","hideLabel":true,"stretch":false,"checked":false,"disabled":false,"loading":false,"compact":false} 1`] = `
":host {
  --p-internal-switch-scaling: 1;
  display: inline-flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(11.2px * (var(--p-internal-switch-scaling) - 0.64285714) + 4px) !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  box-sizing: border-box;
  width: calc(var(--p-internal-switch-scaling) * 3rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
  margin-block: max(0px, calc((calc(6px + 2.125ex) - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  border: 1px solid var(--p-color-contrast-low);
  border-radius: var(--p-radius-full);
  background: var(--p-color-frosted-soft);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-1px - max(0px, calc(24px - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: var(--p-color-primary);
  order: -1;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  button:hover {
    border-color: var(--p-color-primary);
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(var(--p-internal-switch-scaling) * 1.25rem);
  height: calc(var(--p-internal-switch-scaling) * 1.25rem);
  border-radius: var(--p-radius-full);
  background: var(--p-color-primary);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  transform: translate3d(calc(var(--p-internal-switch-scaling) * .1875rem), 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(calc(var(--p-internal-switch-scaling) * .1875rem) * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for {"alignLabel":{"base":"start","xs":"end","s":"start","m":"end","l":"start","xl":"end"},"hideLabel":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"stretch":{"base":false,"xs":true,"s":false,"m":true,"l":false,"xl":true},"checked":false,"disabled":false,"loading":false,"compact":false} 1`] = `
":host {
  --p-internal-switch-scaling: 1;
  display: inline-flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(11.2px * (var(--p-internal-switch-scaling) - 0.64285714) + 4px) !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  box-sizing: border-box;
  width: calc(var(--p-internal-switch-scaling) * 3rem);
  height: calc(var(--p-internal-switch-scaling) * 1.75rem);
  margin-block: max(0px, calc((calc(6px + 2.125ex) - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  border: 1px solid var(--p-color-contrast-low);
  border-radius: var(--p-radius-full);
  background: var(--p-color-frosted-soft);
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-1px - max(0px, calc(24px - calc(var(--p-internal-switch-scaling) * 1.75rem)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: var(--p-color-primary);
  order: -1;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  :host {
    justify-content: space-between !important;
    width: 100% !important;
  }
  label {
    order: 0;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: max(0px, calc((calc(var(--p-internal-switch-scaling) * 1.75rem) - calc(6px + 2.125ex)) / 2));
  }
}

@media(min-width:760px) {
  :host {
    justify-content: flex-start !important;
    width: auto !important;
    vertical-align: top !important;
  }
  label {
    order: -1;
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  :host {
    justify-content: space-between !important;
    width: 100% !important;
  }
  label {
    order: 0;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: max(0px, calc((calc(var(--p-internal-switch-scaling) * 1.75rem) - calc(6px + 2.125ex)) / 2));
  }
}

@media(min-width:1300px) {
  :host {
    justify-content: flex-start !important;
    width: auto !important;
    vertical-align: top !important;
  }
  label {
    order: -1;
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  :host {
    justify-content: space-between !important;
    width: 100% !important;
  }
  label {
    order: 0;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: max(0px, calc((calc(var(--p-internal-switch-scaling) * 1.75rem) - calc(6px + 2.125ex)) / 2));
  }
}

@media(hover:hover) {
  button:hover {
    border-color: var(--p-color-primary);
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(var(--p-internal-switch-scaling) * 1.25rem);
  height: calc(var(--p-internal-switch-scaling) * 1.25rem);
  border-radius: var(--p-radius-full);
  background: var(--p-color-primary);
  transition: transform var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  transform: translate3d(calc(var(--p-internal-switch-scaling) * .1875rem), 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(calc(var(--p-internal-switch-scaling) * .1875rem) * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;
